--- a/index.html
+++ b/index.html
@@ -198,7 +198,7 @@
         </div>
     </div>
     <script>
-        let biblioteca = ["floricultura", "amendoim", "cassino", "borboleta", "corretora", "jogador", "masmorras", "personagens", "livraria", "pensador", "irmandade", "segregar", "ensinar", "baterista", "pacifista", "cooperativo", "assaltante", "esportista", "perigoso", "biblioteca", "livraria", "pernilongo", "variedade", "segregacionista", "relativismo", "jeito", "meigo", "seriado", "resfriado", "doente", "queimadura", "noturno", "adjetivo", "substantivo", "cidade", "mascarado", "nojento", "vindouro", "escola", "parabrisa"]
+        let biblioteca = ["floricultura","xadrez", "yoga", "xerox", "aguarrás", "amendoim", "cassino", "borboleta", "corretora", "jogador", "masmorras", "personagens", "livraria", "pensador", "irmandade", "segregar", "ensinar", "baterista", "pacifista", "cooperativo", "assaltante", "esportista", "perigoso", "biblioteca", "livraria", "pernilongo", "variedade", "segregacionista", "relativismo", "jeito", "meigo", "seriado", "resfriado", "doente", "queimadura", "noturno", "adjetivo", "substantivo", "cidade", "mascarado", "nojento", "vindouro", "escola", "parabrisa"]
         let qt = biblioteca.length - 1
         let pos = Math.round(Math.random() * qt)
         let palavra = biblioteca[pos]
