--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
         </div>
         <div id="msgModal" class="modalContainer">
             <div class="modal">
-                <button class="fechar" onclick="removerModal()">x</button>
+                <button class="fechar" onclick="removerModal()">X</button>
                 <h3 id="msgDica"></h3>
                 <div>
                     <div class="btnsModal">
