--- a/index.html
+++ b/index.html
@@ -23,6 +23,8 @@
                 <option value="t3" class="tema">Tema: Filmes</option>
                 <option value="t4" class="tema">Tema: Séries</option>
                 <option value="t5" class="tema">Tema: Jogos</option>
+                <option value="t6" class="tema">Tema: Animes</option>
+                <option value="t7" class="tema">Tema: Kpop</option>
             </select>
         </div>
         <div id="palavra">
